# ccdata-api

./: .gitignore  Cargo.toml  README.md
src/: backend.rs  error.rs  lib.rs  schemas.rs  utils.rs
src/schemas/: data_api.rs  min_api.rs
src/schemas/data_api/: asset.rs  derivatives_indices.rs  futures.rs  indices_and_reference_rates.rs  news.rs  on_chain_core.rs  on_chain_dex.rs  options.rs  overview.rs  spot.rs
tests/: integration_tests.rs
